--- a/html/newsPage.html
+++ b/html/newsPage.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Document</title>
   <link rel="stylesheet" type="text/css" href="../css/mainPage.css" />
+ 
 </head>
 
 <body>
@@ -120,6 +121,19 @@
       </div>
     </footer>
   </div>
+
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="../js/news.js"></script>
+  <script src="../model/newsData.js"></script>
+  <script>
+    // $(document).ready(function(){
+    //     console.log("DOM is ready ");
+    // });
+    $(function(){
+        console.log("Can we write it again !!");
+        newsPlugin.init();
+    });
+  </script>
 </body>
 
 </html>
