--- a/html/newsPage.html
+++ b/html/newsPage.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Document</title>
   <link rel="stylesheet" type="text/css" href="../css/mainPage.css" />
- 
+  
 </head>
 
 <body>
@@ -103,6 +103,7 @@
                 </a>
               </li>
             </ul>
+            <div id="graph-listing"></div>
           </div>
         </div>
       </div>
@@ -123,6 +124,13 @@
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://code.highcharts.com/highcharts.js"></script>
+  <script src="https://code.highcharts.com/modules/data.js"></script>
+  <script src="https://code.highcharts.com/modules/drilldown.js"></script>
+  <script src="https://code.highcharts.com/modules/exporting.js"></script>
+  <script src="https://code.highcharts.com/modules/export-data.js"></script>
+  <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+
   <script src="../js/news.js"></script>
   <script src="../model/newsData.js"></script>
   <script>
